--- a/demo/alerts.html
+++ b/demo/alerts.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -24,13 +24,13 @@
   <meta name="keywords" content="alerts, bootstrap alerts, feedback, notification" />
   <meta name="author" content="sepsu-dev" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://zepdash-admin.vercel.app/" />
+  <link rel="canonical" href="https://ZepDash.vercel.app/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Alerts - zepdash-admin" />
+  <meta property="og:title" content="Alerts - ZepDash" />
   <meta property="og:description" content="Use Bootstrap alerts to provide meaningful feedback messages to the user." />
   <meta property="og:image" content="assets/images/logo.png" />
-  <meta property="og:url" content="https://zepdash-admin.vercel.app/" />
+  <meta property="og:url" content="https://ZepDash.vercel.app/" />
   <meta property="og:type" content="website" />
 
   <!-- Favicon -->
@@ -211,6 +211,7 @@
                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                 <a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a>
               </nav>
             </div>
 
@@ -226,7 +227,11 @@
               </nav>
             </div>
 
-            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
+                                    <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div>
               <span>Pages</span>
               <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -289,16 +294,16 @@
               </div>
               <div class="card-body">
                 <div class="alert alert-primary" role="alert">
-                  A simple primary alertâ€”check it out!
+                  A simple primary alert—check it out!
                 </div>
                 <div class="alert alert-secondary" role="alert">
-                  A simple secondary alertâ€”check it out!
+                  A simple secondary alert—check it out!
                 </div>
                 <div class="alert alert-success" role="alert">
-                  A simple success alertâ€”check it out!
+                  A simple success alert—check it out!
                 </div>
                 <div class="alert alert-danger" role="alert">
-                  A simple danger alertâ€”check it out!
+                  A simple danger alert—check it out!
                 </div>
 
               </div>
@@ -345,6 +350,8 @@
 </body>
 
 </html>
+
+
 
 
 
