--- a/demo/buttons.html
+++ b/demo/buttons.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -24,13 +24,13 @@
   <meta name="keywords" content="buttons, bootstrap buttons, ui kit" />
   <meta name="author" content="sepsu-dev" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://zepdash-admin.vercel.app/" />
+  <link rel="canonical" href="https://ZepDash.vercel.app/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Buttons - zepdash-admin" />
+  <meta property="og:title" content="Buttons - ZepDash" />
   <meta property="og:description" content="Bootstrap button styles and documentation." />
   <meta property="og:image" content="assets/images/logo.png" />
-  <meta property="og:url" content="https://zepdash-admin.vercel.app/" />
+  <meta property="og:url" content="https://ZepDash.vercel.app/" />
   <meta property="og:type" content="website" />
 
   <!-- Favicon -->
@@ -173,7 +173,8 @@
             </a>
             <div class="collapse" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
               <nav class="zd-sidenav-menu-nested nav">
-                <a class="nav-link" href="index.html">Analytics</a>
+                <a class="nav-link" href="index.html">Default</a>
+                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                 <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
               </nav>
@@ -211,6 +212,7 @@
                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                 <a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a>
               </nav>
             </div>
 
@@ -226,7 +228,11 @@
               </nav>
             </div>
 
-            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
+                                    <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div>
               <span>Pages</span>
               <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -354,6 +360,8 @@
 </body>
 
 </html>
+
+
 
 
 
