--- a/demo/dashboard-crm.html
+++ b/demo/dashboard-crm.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -50,7 +50,7 @@
             <a class="navbar-brand ps-3 d-flex align-items-center" href="index.html">
                 <img src="../assets/images/logo.png" alt="logo" class="logo-navbar" />
                 <span class="ms-2 fw-semibold">ZepDash</span>
-      </a>
+            </a>
             <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
                 <i class="ph-bold ph-sidebar-simple"></i>
             </button>
@@ -162,7 +162,8 @@
                         </a>
                         <div class="collapse show" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
                             <nav class="zd-sidenav-menu-nested nav">
-                                <a class="nav-link" href="index.html">Analytics</a>
+                                <a class="nav-link" href="index.html">Default</a>
+                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                                 <a class="nav-link active" href="dashboard-crm.html">CRM</a>
                                 <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
                             </nav>
@@ -203,6 +204,7 @@
                                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                                 <a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a>
                             </nav>
                         </div>
 
@@ -220,6 +222,10 @@
                             </nav>
                         </div>
 
+                        <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#pagesCollapse">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div>
@@ -471,7 +477,3 @@
 </body>
 
 </html>
-
-
-
-
