--- a/demo/badges.html
+++ b/demo/badges.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -18,13 +18,13 @@
   <meta name="keywords" content="badges, labels, tags, bootstrap" />
   <meta name="author" content="sepsu-dev" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://zepdash-admin.vercel.app/" />
+  <link rel="canonical" href="https://ZepDash.vercel.app/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Badges - zepdash-admin" />
+  <meta property="og:title" content="Badges - ZepDash" />
   <meta property="og:description" content="Bootstrap badges documentation and examples." />
   <meta property="og:image" content="assets/images/logo.png" />
-  <meta property="og:url" content="https://zepdash-admin.vercel.app/" />
+  <meta property="og:url" content="https://ZepDash.vercel.app/" />
   <meta property="og:type" content="website" />
 
   <!-- Favicon -->
@@ -167,7 +167,8 @@
             </a>
             <div class="collapse" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
               <nav class="zd-sidenav-menu-nested nav">
-                <a class="nav-link" href="index.html">Analytics</a>
+                <a class="nav-link" href="index.html">Default</a>
+                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                 <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
               </nav>
@@ -205,6 +206,7 @@
                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                 <a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a>
               </nav>
             </div>
 
@@ -220,7 +222,11 @@
               </nav>
             </div>
 
-            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
+                                    <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div>
               <span>Pages</span>
               <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -276,48 +282,140 @@
         </header>
 
         <div class="row">
+          <!-- Basic Badges -->
+          <div class="col-lg-6">
+            <div class="card animate__animated animate__fadeIn mb-4">
+              <div class="card-header fw-semibold">
+                Basic Badges
+              </div>
+              <div class="card-body">
+                <p class="text-muted small mb-3">Add any of the below mentioned modifier classes to change the
+                  appearance of a badge.</p>
+                <div class="d-flex flex-wrap gap-2">
+                  <span class="badge bg-primary">Primary</span>
+                  <span class="badge bg-secondary">Secondary</span>
+                  <span class="badge bg-success">Success</span>
+                  <span class="badge bg-danger">Danger</span>
+                  <span class="badge bg-warning text-dark">Warning</span>
+                  <span class="badge bg-info text-dark">Info</span>
+                  <span class="badge bg-light text-dark border">Light</span>
+                  <span class="badge bg-dark">Dark</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Pill Badges -->
+          <div class="col-lg-6">
+            <div class="card animate__animated animate__fadeIn mb-4">
+              <div class="card-header fw-semibold">
+                Pill Badges
+              </div>
+              <div class="card-body">
+                <p class="text-muted small mb-3">Use the <code>.rounded-pill</code> utility class to make badges more
+                  rounded with a larger <code>border-radius</code>.</p>
+                <div class="d-flex flex-wrap gap-2">
+                  <span class="badge rounded-pill bg-primary">Primary</span>
+                  <span class="badge rounded-pill bg-secondary">Secondary</span>
+                  <span class="badge rounded-pill bg-success">Success</span>
+                  <span class="badge rounded-pill bg-danger">Danger</span>
+                  <span class="badge rounded-pill bg-warning text-dark">Warning</span>
+                  <span class="badge rounded-pill bg-info text-dark">Info</span>
+                  <span class="badge rounded-pill bg-light text-dark border">Light</span>
+                  <span class="badge rounded-pill bg-dark">Dark</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Light Badges -->
+          <div class="col-lg-6">
+            <div class="card animate__animated animate__fadeIn mb-4">
+              <div class="card-header fw-semibold">
+                Light Badges
+              </div>
+              <div class="card-body">
+                <p class="text-muted small mb-3">Use <code>.bg-*-subtle</code> for a light colored badge.</p>
+                <div class="d-flex flex-wrap gap-2">
+                  <span class="badge bg-primary-subtle text-primary">Primary</span>
+                  <span class="badge bg-secondary-subtle text-secondary">Secondary</span>
+                  <span class="badge bg-success-subtle text-success">Success</span>
+                  <span class="badge bg-danger-subtle text-danger">Danger</span>
+                  <span class="badge bg-warning-subtle text-warning">Warning</span>
+                  <span class="badge bg-info-subtle text-info">Info</span>
+                  <span class="badge bg-light-subtle text-dark border">Light</span>
+                  <span class="badge bg-dark-subtle text-dark">Dark</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Outline Badges -->
+          <div class="col-lg-6">
+            <div class="card animate__animated animate__fadeIn mb-4">
+              <div class="card-header fw-semibold">
+                Outline Badges
+              </div>
+              <div class="card-body">
+                <p class="text-muted small mb-3">Custom outline styles for badges.</p>
+                <div class="d-flex flex-wrap gap-2">
+                  <span class="badge border border-primary text-primary bg-transparent">Primary</span>
+                  <span class="badge border border-secondary text-secondary bg-transparent">Secondary</span>
+                  <span class="badge border border-success text-success bg-transparent">Success</span>
+                  <span class="badge border border-danger text-danger bg-transparent">Danger</span>
+                  <span class="badge border border-warning text-warning bg-transparent">Warning</span>
+                  <span class="badge border border-info text-info bg-transparent">Info</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Badge Sizing -->
           <div class="col-lg-6">
             <div class="card animate__animated animate__fadeIn mb-4">
               <div class="card-header fw-semibold">
                 Badge Sizing & Headings
               </div>
               <div class="card-body">
-                <h1>Heading 1 <span class="badge bg-secondary">New</span></h1>
-                <h3>Heading 3 <span class="badge bg-secondary">New</span></h3>
-
+                <p class="text-muted small mb-3">Badges scale to match the size of the immediate parent element by using
+                  relative font sizing and <code>em</code> units.</p>
+                <h1>Heading 1 <span class="badge bg-primary">New</span></h1>
+                <h2>Heading 2 <span class="badge bg-secondary">New</span></h2>
+                <h3>Heading 3 <span class="badge bg-success">New</span></h3>
+                <h4>Heading 4 <span class="badge bg-danger">New</span></h4>
+                <h5>Heading 5 <span class="badge bg-warning text-dark">New</span></h5>
+                <h6>Heading 6 <span class="badge bg-info text-dark">New</span></h6>
               </div>
             </div>
           </div>
 
+          <!-- Buttons with Badges -->
           <div class="col-lg-6">
             <div class="card animate__animated animate__fadeIn mb-4">
               <div class="card-header fw-semibold">
-                Badge Styles
+                Buttons with Badges
               </div>
               <div class="card-body">
-                <p>
-                  <span class="badge bg-primary">Primary</span>
-                  <span class="badge bg-secondary">Secondary</span>
-                  <span class="badge bg-success">Success</span>
-                  <span class="badge bg-danger">Danger</span>
+                <p class="text-muted small mb-3">Badges can be used as part of links or buttons to provide a counter.
                 </p>
+                <div class="d-flex flex-wrap gap-2">
+                  <button type="button" class="btn btn-primary position-relative">
+                    Inbox
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                      99+
+                      <span class="visually-hidden">unread messages</span>
+                    </span>
+                  </button>
 
-                <hr class="my-4">
+                  <button type="button" class="btn btn-dark">
+                    Notifications <span class="badge bg-light text-dark ms-1">4</span>
+                  </button>
 
-                <div class="d-flex align-items-center mb-3">
-                  <span class="me-2">Pill Badges:</span>
-                  <span class="badge rounded-pill bg-primary">Primary</span>
-                  <span class="badge rounded-pill bg-success ms-1">Success</span>
+                  <button type="button" class="btn btn-outline-primary">
+                    Profile <span class="badge bg-primary ms-1">New</span>
+                  </button>
                 </div>
-                <pre
-                  class="code-snippet d-none"><code class="language-html">&lt;span class="badge rounded-pill bg-primary"&gt;Primary&lt;/span&gt;</code></pre>
               </div>
-
-              <hr class="my-4">
-              <button type="button" class="btn btn-primary">
-                Notifications <span class="badge bg-secondary">4</span>
-              </button>
-
             </div>
           </div>
         </div>
@@ -337,7 +435,5 @@
 </body>
 
 </html>
-
-
 
 
