--- a/demo/cards.html
+++ b/demo/cards.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -51,7 +51,7 @@
             <a class="navbar-brand ps-3 d-flex align-items-center" href="index.html">
                 <img src="../assets/images/logo.png" alt="logo" class="logo-navbar" />
                 <span class="ms-2 fw-semibold">ZepDash</span>
-      </a>
+            </a>
             <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
                 <i class="ph-bold ph-sidebar-simple"></i>
             </button>
@@ -163,7 +163,8 @@
                         </a>
                         <div class="collapse" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
                             <nav class="zd-sidenav-menu-nested nav">
-                                <a class="nav-link" href="index.html">Analytics</a>
+                                <a class="nav-link" href="index.html">Default</a>
+                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                                 <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
                             </nav>
@@ -202,6 +203,7 @@
                                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                                 <a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a>
                             </nav>
                         </div>
 
@@ -218,8 +220,11 @@
                             </nav>
                         </div>
 
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                            data-bs-target="#pagesCollapse">
+                                                <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
+                        <a class='nav-link collapsed' href='#' data-bs-toggle='collapse' data-bs-target='#pagesCollapse'>
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div>
                             <span>Pages</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -277,95 +282,94 @@
 
                 <div class="row">
 
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card animate__animated animate__fadeIn bg-primary text-white mb-4">
-                            <div class="card-body">Primary Card</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                <div class="small text-white"><i class="ph-bold ph-caret-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card animate__animated animate__fadeIn bg-warning text-dark mb-4">
-                            <div class="card-body">Warning Card</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-dark stretched-link" href="#">View Details</a>
-                                <div class="small text-dark"><i class="ph-bold ph-caret-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-12">
-                        <div class="card animate__animated animate__fadeIn mb-4">
-                            <div class="card-header fw-semibold">
-                                Dashboard Widget Card Code
-                            </div>
-                            <div class="card-body">
-
-                                <div class="code-wrapper mt-0">
-                                    <div class="code-header">
-                                        <button class="btn btn-sm btn-outline-primary btn-toggle-code">
-                                            <i class="ph-bold ph-code me-1"></i> Show Code
-                                        </button>
-                                        <button class="btn btn-sm btn-outline-secondary btn-copy-code">
-                                            <i class="ph-bold ph-copy me-1"></i> Copy
-                                        </button>
-                                    </div>
-
+                    <div class="row">
+                        <div class="col-xl-3 col-md-6">
+                            <div
+                                class="card animate__animated animate__fadeIn bg-primary text-white mb-4 shadow-sm border-0">
+                                <div class="card-body">Primary Card</div>
+                                <div
+                                    class="card-footer d-flex align-items-center justify-content-between border-0 bg-transparent">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="ph-bold ph-caret-right"></i></div>
                                 </div>
                             </div>
                         </div>
+                        <div class="col-xl-3 col-md-6">
+                            <div
+                                class="card animate__animated animate__fadeIn bg-warning text-dark mb-4 shadow-sm border-0">
+                                <div class="card-body">Warning Card</div>
+                                <div
+                                    class="card-footer d-flex align-items-center justify-content-between border-0 bg-transparent">
+                                    <a class="small text-dark stretched-link" href="#">View Details</a>
+                                    <div class="small text-dark"><i class="ph-bold ph-caret-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6">
+                            <div
+                                class="card animate__animated animate__fadeIn bg-success text-white mb-4 shadow-sm border-0">
+                                <div class="card-body">Success Card</div>
+                                <div
+                                    class="card-footer d-flex align-items-center justify-content-between border-0 bg-transparent">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="ph-bold ph-caret-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6">
+                            <div
+                                class="card animate__animated animate__fadeIn bg-danger text-white mb-4 shadow-sm border-0">
+                                <div class="card-body">Danger Card</div>
+                                <div
+                                    class="card-footer d-flex align-items-center justify-content-between border-0 bg-transparent">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="ph-bold ph-caret-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-
+                    <div class="row">
                         <div class="col-lg-6">
-                            <div class="card animate__animated animate__fadeIn mb-4">
-                                <div class="card-header fw-semibold">
+                            <div class="card animate__animated animate__fadeIn mb-4 shadow-sm border-0">
+                                <div class="card-header bg-transparent border-0 fw-bold pt-4 px-4">
                                     Default Card
                                 </div>
-                                <div class="card-body">
-                                    This uses some of the Bootstrap default utility classes. Use cards to display
-                                    concise
-                                    content.
+                                <div class="card-body px-4 pb-4">
+                                    This is a basic card with some text inside. You can use cards to display content in
+                                    a structured way. ZepDash cards have soft shadows and clean borders.
                                 </div>
                             </div>
-                        </div>
 
-
-                        <div class="col-lg-6">
-                            <div class="card animate__animated animate__fadeIn mb-4">
-                                <div class="card-header fw-semibold">
+                            <div class="card animate__animated animate__fadeIn mb-4 shadow-sm border-0">
+                                <div class="card-header bg-transparent border-0 fw-bold pt-4 px-4">
                                     Card with Footer
                                 </div>
-                                <div class="card-body">
-                                    This is the card body content. You can put anything here.
+                                <div class="card-body px-4 pb-4">
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
                                 </div>
-                                <div class="card-footer text-muted">
-                                    Last updated 2 mins ago
+                                <div class="card-footer bg-light border-0 py-3 px-4">
+                                    <small class="text-muted">Last updated 3 mins ago</small>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-lg-12">
-                            <div class="card animate__animated animate__fadeIn mb-4">
-                                <div class="card-header fw-semibold">
-                                    Basic Card Code
+                        <div class="col-lg-6">
+                            <div class="card animate__animated animate__fadeIn mb-4 shadow-sm border-0">
+                                <div class="card-img-top bg-primary-subtle d-flex align-items-center justify-content-center"
+                                    style="height: 180px;">
+                                    <i class="ph-bold ph-image text-primary opacity-25" style="font-size: 5rem;"></i>
                                 </div>
-                                <div class="card-body">
-                                    <div class="code-wrapper mt-0">
-                                        <div class="code-header">
-                                            <button class="btn btn-sm btn-outline-primary btn-toggle-code">
-                                                <i class="ph-bold ph-code me-1"></i> Show Code
-                                            </button>
-                                            <button class="btn btn-sm btn-outline-secondary btn-copy-code">
-                                                <i class="ph-bold ph-copy me-1"></i> Copy
-                                            </button>
-                                        </div>
-                                    </div>
+                                <div class="card-body p-4">
+                                    <h5 class="card-title fw-bold">Card with Image</h5>
+                                    <p class="card-text text-muted">A card with an image at the top. Perfect for blogs
+                                        or product listings.</p>
+                                    <a href="#" class="btn btn-primary btn-sm px-4">Go somewhere</a>
                                 </div>
                             </div>
-
                         </div>
+                    </div>
             </section>
         </main>
     </div>
@@ -381,7 +385,4 @@
 </body>
 
 </html>
-
-
-
 
