--- a/demo/change-password.html
+++ b/demo/change-password.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -160,7 +160,8 @@
             </a>
             <div class="collapse" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
               <nav class="zd-sidenav-menu-nested nav">
-                <a class="nav-link" href="index.html">Analytics</a>
+                <a class="nav-link" href="index.html">Default</a>
+                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                 <a class="nav-link " href="dashboard-crm.html">CRM</a>
                 <a class="nav-link " href="dashboard-ecommerce.html">Ecommerce</a>
               </nav>
@@ -199,6 +200,7 @@
                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                 <a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a>
               </nav>
             </div>
 
@@ -215,7 +217,11 @@
               </nav>
             </div>
 
-            <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse" aria-expanded="true">
+                                    <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
+                        <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse" aria-expanded="true">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div>
               <span>Pages</span>
               <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -261,10 +267,11 @@
 
     <main id="layoutSidenav_content">
       <section class="container-fluid px-4 pb-5">
-        <nav aria-label="breadcrumb" class="my-4">
-          <ol class="breadcrumb mb-0">
-            <li class="breadcrumb-item"><a href="index.html">Dashboards</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Change Password</li>
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+            <li class="breadcrumb-item">Pages</li>
+            <li class="breadcrumb-item active">Change Password</li>
           </ol>
         </nav>
 
@@ -335,7 +342,4 @@
 </body>
 
 </html>
-
-
-
 
