--- a/demo/colors.html
+++ b/demo/colors.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -35,8 +35,10 @@
 <body class='zd-nav-fixed'>
   <header>
     <nav class="zd-topnav navbar navbar-expand navbar-light">
-      <a class="navbar-brand ps-3 d-flex align-items-center" href="index.html"><img src="../assets/images/logo.png" alt="logo"
-          class="logo-navbar" /><span class="ms-2 fw-semibold">ZepDash</span></div>
+      <a class="navbar-brand ps-3 d-flex align-items-center" href="index.html">
+        <img src="../assets/images/logo.png" alt="logo" class="logo-navbar" />
+        <span class="ms-2 fw-semibold">ZepDash</span>
+      </a>
       <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
         <i class="ph-bold ph-sidebar-simple"></i>
       </button>
@@ -144,7 +146,8 @@
             </a>
             <div class="collapse" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
               <nav class="zd-sidenav-menu-nested nav">
-                <a class="nav-link" href="index.html">Analytics</a>
+                <a class="nav-link" href="index.html">Default</a>
+                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                 <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
               </nav>
@@ -178,6 +181,7 @@
                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                 <a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a>
               </nav>
             </div>
             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#tablesCollapse">
@@ -190,7 +194,11 @@
                 <a class="nav-link" href="tables-datatables.html">DataTables</a>
               </nav>
             </div>
-            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
+                                    <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div><span>Pages</span>
               <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
             </a>
@@ -294,7 +302,4 @@
 </body>
 
 </html>
-
-
-
 
