--- a/demo/dashboard-ecommerce.html
+++ b/demo/dashboard-ecommerce.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -150,7 +150,8 @@
                         </a>
                         <div class="collapse show" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
                             <nav class="zd-sidenav-menu-nested nav">
-                                <a class="nav-link" href="index.html">Analytics</a>
+                                <a class="nav-link" href="index.html">Default</a>
+                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                                 <a class="nav-link active" href="dashboard-ecommerce.html">Ecommerce</a>
                             </nav>
@@ -191,6 +192,7 @@
                                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                                 <a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a>
                             </nav>
                         </div>
 
@@ -208,8 +210,11 @@
                             </nav>
                         </div>
 
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                            data-bs-target="#pagesCollapse">
+                                                <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
+                        <a class='nav-link collapsed' href='#' data-bs-toggle='collapse' data-bs-target='#pagesCollapse'>
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div>
                             <span>Pages</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -463,6 +468,8 @@
 </body>
 
 </html>
+
+
 
 
 
