--- a/demo/profile.html
+++ b/demo/profile.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -50,7 +50,7 @@
             <a class="navbar-brand ps-3 d-flex align-items-center" href="index.html">
                 <img src="../assets/images/logo.png" alt="logo" class="logo-navbar" />
                 <span class="ms-2 fw-semibold">ZepDash</span>
-      </a>
+            </a>
             <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
                 <i class="ph-bold ph-sidebar-simple"></i>
             </button>
@@ -162,7 +162,8 @@
                         </a>
                         <div class="collapse" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
                             <nav class="zd-sidenav-menu-nested nav">
-                                <a class="nav-link" href="index.html">Analytics</a>
+                                <a class="nav-link" href="index.html">Default</a>
+                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                                 <a class="nav-link " href="dashboard-crm.html">CRM</a>
                                 <a class="nav-link " href="dashboard-ecommerce.html">Ecommerce</a>
                             </nav>
@@ -203,6 +204,7 @@
                                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                                 <a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a>
                             </nav>
                         </div>
 
@@ -220,6 +222,10 @@
                             </nav>
                         </div>
 
+                                                <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
                         <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse"
                             aria-expanded="true">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div>
@@ -268,10 +274,11 @@
 
         <main id="layoutSidenav_content">
             <section class="container-fluid px-4 pb-5">
-                <nav aria-label="breadcrumb" class="my-4">
-                    <ol class="breadcrumb mb-0">
-                        <li class="breadcrumb-item"><a href="index.html">Dashboards</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Profile</li>
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                        <li class="breadcrumb-item">Pages</li>
+                        <li class="breadcrumb-item active">Profile</li>
                     </ol>
                 </nav>
 
@@ -376,7 +383,4 @@
 </body>
 
 </html>
-
-
-
 
