--- a/demo/progress.html
+++ b/demo/progress.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -149,7 +149,8 @@
             </a>
             <div class="collapse" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
               <nav class="zd-sidenav-menu-nested nav">
-                <a class="nav-link" href="index.html">Analytics</a>
+                <a class="nav-link" href="index.html">Default</a>
+                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                 <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
               </nav>
@@ -181,7 +182,8 @@
               <nav class="zd-sidenav-menu-nested nav"><a class="nav-link" href="forms-basic.html">Basic
                   Inputs</a><a class="nav-link" href="forms-select.html">Select</a><a class="nav-link"
                   href="forms-checks.html">Checkboxes & Radios</a><a class="nav-link" href="forms-layout.html">Form
-                  Layout</a><a class="nav-link" href="forms-validation.html">Validation</a> </nav>
+                  Layout</a><a class="nav-link" href="forms-validation.html">Validation</a>
+                                <a class="nav-link" href="forms-editors.html">Editors</a> </nav>
             </div>
             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#tablesCollapse">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-table"></i></div><span>Tables</span>
@@ -191,7 +193,11 @@
               <nav class="zd-sidenav-menu-nested nav"><a class="nav-link" href="tables-basic.html">Basic
                   Table</a><a class="nav-link" href="tables-datatables.html">DataTables</a> </nav>
             </div>
-            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
+                                    <a class="nav-link" href="maps.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
+                            <span>Maps</span>
+                        </a>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-file"></i></div><span>Pages</span>
               <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
             </a>
@@ -322,6 +328,8 @@
 </body>
 
 </html>
+
+
 
 
 
