--- a/demo/login.html
+++ b/demo/login.html
@@ -7,16 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Meta SEO -->
-    <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-    <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
-    <meta name="author" content="ZepDash" />
+    <meta name="description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta name="keywords" content="naondash, admin dashboard, bootstrap 5, ui kit, webapp" />
+    <meta name="author" content="NaonDash" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-    <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:title" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
     <meta property="og:type" content="website" />
-    <title>ZepDash - Login</title>
+    <title>NaonDash - Login</title>
     <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
