--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Meta SEO -->
-    <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-    <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
-    <meta name="author" content="ZepDash" />
+    <meta name="description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta name="keywords" content="naondash, admin dashboard, bootstrap 5, ui kit, webapp" />
+    <meta name="author" content="NaonDash" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-    <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:title" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
     <meta property="og:type" content="website" />
-    <title>ZepDash - Free Bootstrap 5 Admin Dashboard</title>
+    <title>NaonDash - Free Bootstrap 5 Admin Dashboard</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
@@ -37,7 +37,7 @@
                 <div class="col-lg-10">
                     <h1 class="hero-title">Free Bootstrap 5 Admin Dashboard</h1>
                     <p class="hero-subtitle">
-                        Experience the perfect blend of elegance and performance. ZepDash is a premium, fully responsive
+                        Experience the perfect blend of elegance and performance. NaonDash is a premium, fully responsive
                         admin template crafted to elevate both your personal and commercial projects to the next level.
                     </p>
                 </div>
@@ -46,7 +46,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-11">
                     <div class="hero-image-container">
-                        <img src="assets/images/banner.png" alt="ZepDash" class="hero-image rounded shadow">
+                        <img src="assets/images/banner.png" alt="NaonDash" class="hero-image rounded shadow">
                     </div>
                 </div>
             </div>
@@ -54,9 +54,8 @@
             <div class="row justify-content-center">
                 <div class="col-12">
                     <div class="button-group">
-                        <a href="demo/index.html" class="btn btn-premium btn-primary-zd">View Live
-                            Demo</a>
-                        <a href="docs/index.html" class="btn btn-premium btn-outline-zd">Read Documentation</a>
+                        <a href="demo/index.html" class="btn btn-premium btn-primary-zd">Demo</a>
+                        <a href="docs/index.html" class="btn btn-premium btn-outline-zd">Documentation</a>
                     </div>
                 </div>
             </div>
