--- a/demo/buttons.html
+++ b/demo/buttons.html
@@ -8,29 +8,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <!-- Meta SEO -->
-  <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-  <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
-  <meta name="author" content="ZepDash" />
+  <meta name="description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+  <meta name="keywords" content="naondash, admin dashboard, bootstrap 5, ui kit, webapp" />
+  <meta name="author" content="NaonDash" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-  <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+  <meta property="og:title" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+  <meta property="og:description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
   <meta property="og:type" content="website" />
-  <title>ZepDash - Buttons</title>
+  <title>NaonDash - Buttons</title>
 
   <!-- Meta SEO -->
   <meta name="description" content="Bootstrap button styles and documentation." />
   <meta name="keywords" content="buttons, bootstrap buttons, ui kit" />
   <meta name="author" content="sepsu-dev" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://ZepDash.vercel.app/" />
+  <link rel="canonical" href="https://NaonDash.vercel.app/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Buttons - ZepDash" />
+  <meta property="og:title" content="Buttons - NaonDash" />
   <meta property="og:description" content="Bootstrap button styles and documentation." />
   <meta property="og:image" content="assets/images/logo.png" />
-  <meta property="og:url" content="https://ZepDash.vercel.app/" />
+  <meta property="og:url" content="https://NaonDash.vercel.app/" />
   <meta property="og:type" content="website" />
 
   <!-- Favicon -->
@@ -62,7 +62,7 @@
     <nav class="zd-topnav navbar navbar-expand navbar-light">
       <a class="navbar-brand ps-3 d-flex align-items-center" href="index.html">
         <img src="../assets/images/logo.png" alt="logo" class="logo-navbar" />
-        <span class="ms-2 fw-semibold">ZepDash</span>
+        <span class="ms-2 fw-semibold">NaonDash</span>
       </a>
       <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
         <i class="ph-bold ph-sidebar-simple"></i>
@@ -181,7 +181,7 @@
                   style="width: 48px; height: 48px; object-fit: cover;" />
                 <div class="ms-3">
                   <h6 class="mb-0 fw-bold">Ujang Kasep</h6>
-                  <p class="mb-0 text-muted extra-small">ujang@zepdash.com</p>
+                  <p class="mb-0 text-muted extra-small">ujang@naondash.com</p>
                 </div>
               </div>
             </li>
@@ -316,6 +316,29 @@
                                 <a class="nav-link" href="500.html">500 Error</a>
                             </nav>
                         </div>
+            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#multiLevelCollapse"
+              aria-expanded="false">
+              <div class="zd-nav-link-icon"><i class="ph-bold ph-tree-structure"></i></div>
+              <span>Multi Level</span>
+              <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
+            </a>
+            <div class="collapse" id="multiLevelCollapse" data-bs-parent="#sidenavAccordion">
+              <nav class="zd-sidenav-menu-nested nav">
+                <a class="nav-link" href="#">Level 2 Item</a>
+                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#level3Collapse"
+                  aria-expanded="false">
+                  <span>Level 3 Menu</span>
+                  <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
+                </a>
+                <div class="collapse" id="level3Collapse">
+                  <nav class="zd-sidenav-menu-nested nav">
+                    <a class="nav-link" href="#">Level 3 Item 1</a>
+                    <a class="nav-link" href="#">Level 3 Item 2</a>
+                  </nav>
+                </div>
+              </nav>
+            </div>
+
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#customCollapse" aria-expanded="false">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-browsers"></i></div>
                             <span>Custom Pages</span>
