--- a/demo/profile.html
+++ b/demo/profile.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-    <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
-    <meta name="author" content="ZepDash" />
+    <meta name="description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta name="keywords" content="naondash, admin dashboard, bootstrap 5, ui kit, webapp" />
+    <meta name="author" content="NaonDash" />
     <meta name="robots" content="index, follow" />
 
-    <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-    <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:title" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
     <meta property="og:type" content="website" />
-    <title>ZepDash - Profile</title>
+    <title>NaonDash - Profile</title>
 
     <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -31,7 +31,7 @@
         <nav class="zd-topnav navbar navbar-expand navbar-light">
             <a class="navbar-brand ps-3 d-flex align-items-center" href="index.html">
                 <img src="../assets/images/logo.png" alt="logo" class="logo-navbar" />
-                <span class="ms-2 fw-semibold">ZepDash</span>
+                <span class="ms-2 fw-semibold">NaonDash</span>
             </a>
             <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
                 <i class="ph-bold ph-sidebar-simple"></i>
@@ -150,7 +150,7 @@
                                     style="width: 48px; height: 48px; object-fit: cover;" />
                                 <div class="ms-3">
                                     <h6 class="mb-0 fw-bold">Ujang Kasep</h6>
-                                    <p class="mb-0 text-muted extra-small">ujang@zepdash.com</p>
+                                    <p class="mb-0 text-muted extra-small">ujang@naondash.com</p>
                                 </div>
                             </div>
                         </li>
@@ -286,6 +286,29 @@
                                 <a class="nav-link" href="500.html">500 Error</a>
                             </nav>
                         </div>
+            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#multiLevelCollapse"
+              aria-expanded="false">
+              <div class="zd-nav-link-icon"><i class="ph-bold ph-tree-structure"></i></div>
+              <span>Multi Level</span>
+              <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
+            </a>
+            <div class="collapse" id="multiLevelCollapse" data-bs-parent="#sidenavAccordion">
+              <nav class="zd-sidenav-menu-nested nav">
+                <a class="nav-link" href="#">Level 2 Item</a>
+                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#level3Collapse"
+                  aria-expanded="false">
+                  <span>Level 3 Menu</span>
+                  <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
+                </a>
+                <div class="collapse" id="level3Collapse">
+                  <nav class="zd-sidenav-menu-nested nav">
+                    <a class="nav-link" href="#">Level 3 Item 1</a>
+                    <a class="nav-link" href="#">Level 3 Item 2</a>
+                  </nav>
+                </div>
+              </nav>
+            </div>
+
                         <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#customCollapse"
                             aria-expanded="true">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-browsers"></i></div>
@@ -377,7 +400,7 @@
                                         </div>
                                         <div class="col-12">
                                             <label class="form-label small fw-bold">Email Address</label>
-                                            <input type="email" class="form-control" value="ujang@zepdash.com"
+                                            <input type="email" class="form-control" value="ujang@naondash.com"
                                                 placeholder="Email Address">
                                         </div>
                                         <div class="col-md-6">
@@ -392,7 +415,7 @@
                                         <div class="col-12">
                                             <label class="form-label small fw-bold">Bio</label>
                                             <textarea class="form-control" rows="4"
-                                                placeholder="Brief about yourself...">Master administrator of ZepDash Admin panel.</textarea>
+                                                placeholder="Brief about yourself...">Master administrator of NaonDash Admin panel.</textarea>
                                         </div>
                                     </div>
                                     <div class="mt-4 text-end">
