--- a/demo/toasts.html
+++ b/demo/toasts.html
@@ -7,69 +7,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Meta SEO -->
-    <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-    <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
-    <meta name="author" content="ZepDash" />
+    <meta name="description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta name="keywords" content="naondash, admin dashboard, bootstrap 5, ui kit, webapp" />
+    <meta name="author" content="NaonDash" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-    <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:title" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:description" content="NaonDash - Free Bootstrap 5 Admin Dashboard" />
     <meta property="og:type" content="website" />
-    <title>ZepDash - Toasts</title>
+    <title>NaonDash - Toasts</title>
     <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../assets/plugins/nprogress/nprogress.min.css" />
     <link href="../assets/styles/styles.css" rel="stylesheet" />
-    <!DOCTYPE html>
-    <html lang="en">
-
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-        <!-- Meta SEO -->
-        <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-        <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
-        <meta name="author" content="ZepDash" />
-        <meta name="robots" content="index, follow" />
-
-        <!-- Open Graph -->
-        <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-        <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
-        <meta property="og:type" content="website" />
-        <title>ZepDash - Toasts</title>
-        <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-        <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="../assets/plugins/nprogress/nprogress.min.css" />
-        <link href="../assets/styles/styles.css" rel="stylesheet" />
-        <link rel="stylesheet" href="../assets/plugins/animate/animate.min.css" />
-        <link rel="stylesheet" href="../assets/plugins/sweetalert2/sweetalert2.min.css" />
-        <link rel="stylesheet" href="../assets/plugins/tempus-dominus/css/tempus-dominus.min.css" />
-        <link rel="stylesheet" href="../assets/plugins/select2/css/select2.min.css" />
-        <link rel="stylesheet" href="../assets/plugins/select2/css/select2-bootstrap-5-theme.min.css" />
-        <link rel="stylesheet" href="../assets/plugins/simplebar/simplebar.min.css" />
-        <link rel="stylesheet" href="../assets/plugins/phosphor/bold/style.css" />
-        <!-- Notyf (Solid-style Toasts) -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
-    </head>
+    <link rel="stylesheet" href="../assets/plugins/animate/animate.min.css" />
+    <link rel="stylesheet" href="../assets/plugins/sweetalert2/sweetalert2.min.css" />
+    <link rel="stylesheet" href="../assets/plugins/tempus-dominus/css/tempus-dominus.min.css" />
+    <link rel="stylesheet" href="../assets/plugins/select2/css/select2.min.css" />
+    <link rel="stylesheet" href="../assets/plugins/select2/css/select2-bootstrap-5-theme.min.css" />
+    <link rel="stylesheet" href="../assets/plugins/simplebar/simplebar.min.css" />
+    <link rel="stylesheet" href="../assets/plugins/phosphor/bold/style.css" />
+    <!-- Notyf (Solid-style Toasts) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+</head>
 
 <body class='zd-nav-fixed'>
     <header>
         <nav class="zd-topnav navbar navbar-expand navbar-light">
             <a class="navbar-brand ps-3 d-flex align-items-center" href="index.html">
                 <img src="../assets/images/logo.png" alt="logo" class="logo-navbar" />
-                <span class="ms-2 fw-semibold">ZepDash</span>
+                <span class="ms-2 fw-semibold">NaonDash</span>
             </a>
             <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
                 <i class="ph-bold ph-sidebar-simple"></i>
             </button>
 
             <ul class="navbar-nav ms-auto align-items-center">
-                                                                <!-- Messages -->
+                <!-- Messages -->
                 <li class="nav-item dropdown me-2">
                     <a class="nav-link nav-icon" href="#" id="msgDropdown" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
@@ -166,7 +142,7 @@
                         </li>
                     </ul>
                 </li>
-<!-- User Profile -->
+                <!-- User Profile -->
                 <li class="nav-item dropdown ms-1">
                     <a class="nav-link p-0" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
@@ -181,7 +157,7 @@
                                     style="width: 48px; height: 48px; object-fit: cover;" />
                                 <div class="ms-3">
                                     <h6 class="mb-0 fw-bold">Ujang Kasep</h6>
-                                    <p class="mb-0 text-muted extra-small">ujang@zepdash.com</p>
+                                    <p class="mb-0 text-muted extra-small">ujang@naondash.com</p>
                                 </div>
                             </div>
                         </li>
@@ -208,9 +184,10 @@
         <aside id="layoutSidenav_nav">
             <nav class="zd-sidenav accordion zd-sidenav-light" id="sidenavAccordion">
                 <div class="zd-sidenav-menu" data-simplebar>
-                                                            <div class="nav">
+                    <div class="nav">
                         <h2 class="zd-sidenav-menu-heading">Dashboard</h2>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#dashboardCollapse" aria-expanded="false">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#dashboardCollapse" aria-expanded="false">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-house"></i></div>
                             <span>Dashboards</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -229,7 +206,8 @@
                             <span>Inbox</span>
                         </a>
                         <h2 class="zd-sidenav-menu-heading">Components</h2>
-                        <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#componentsCollapse" aria-expanded="true">
+                        <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#componentsCollapse"
+                            aria-expanded="true">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-squares-four"></i></div>
                             <span>UI Elements</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -247,7 +225,8 @@
                                 <a class="nav-link" href="spinners.html">Spinners</a>
                             </nav>
                         </div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#formsCollapse" aria-expanded="false">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#formsCollapse"
+                            aria-expanded="false">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-textbox"></i></div>
                             <span>Forms</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -262,7 +241,8 @@
                                 <a class="nav-link" href="forms-editors.html">Editors</a>
                             </nav>
                         </div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#tablesCollapse" aria-expanded="false">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#tablesCollapse" aria-expanded="false">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-table"></i></div>
                             <span>Tables</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -275,7 +255,8 @@
                             </nav>
                         </div>
                         <h2 class="zd-sidenav-menu-heading">Style</h2>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#iconsCollapse" aria-expanded="false">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#iconsCollapse"
+                            aria-expanded="false">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-paint-brush"></i></div>
                             <span>Icons & Styles</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -292,7 +273,8 @@
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-map-trifold"></i></div>
                             <span>Maps</span>
                         </a>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse" aria-expanded="false">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapse"
+                            aria-expanded="false">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-lock"></i></div>
                             <span>Authentication</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -305,7 +287,8 @@
                                 <a class="nav-link" href="change-password.html">Change Password</a>
                             </nav>
                         </div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#errorCollapse" aria-expanded="false">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#errorCollapse"
+                            aria-expanded="false">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-warning-octagon"></i></div>
                             <span>Error Pages</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -316,7 +299,31 @@
                                 <a class="nav-link" href="500.html">500 Error</a>
                             </nav>
                         </div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#customCollapse" aria-expanded="false">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#multiLevelCollapse" aria-expanded="false">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-tree-structure"></i></div>
+                            <span>Multi Level</span>
+                            <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
+                        </a>
+                        <div class="collapse" id="multiLevelCollapse" data-bs-parent="#sidenavAccordion">
+                            <nav class="zd-sidenav-menu-nested nav">
+                                <a class="nav-link" href="#">Level 2 Item</a>
+                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                                    data-bs-target="#level3Collapse" aria-expanded="false">
+                                    <span>Level 3 Menu</span>
+                                    <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
+                                </a>
+                                <div class="collapse" id="level3Collapse">
+                                    <nav class="zd-sidenav-menu-nested nav">
+                                        <a class="nav-link" href="#">Level 3 Item 1</a>
+                                        <a class="nav-link" href="#">Level 3 Item 2</a>
+                                    </nav>
+                                </div>
+                            </nav>
+                        </div>
+
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#customCollapse" aria-expanded="false">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-browsers"></i></div>
                             <span>Custom Pages</span>
                             <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
@@ -450,3 +457,121 @@
     <script src="../assets/plugins/nprogress/nprogress.min.js"></script>
     <!-- Notyf -->
     <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+    <script src="../assets/scripts/scripts.js"></script>
+    <script>
+        $(function () {
+            // Bootstrap Toasts
+            const toastTrigger = document.getElementById('liveToastBtn')
+            const toastLiveExample = document.getElementById('liveToast')
+            if (toastTrigger) {
+                const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastLiveExample)
+                toastTrigger.addEventListener('click', () => {
+                    toastBootstrap.show()
+                })
+            }
+
+            // Colored Toasts
+            $('#successToastBtn').on('click', function () {
+                const toast = new bootstrap.Toast(document.getElementById('successToast'));
+                toast.show();
+            });
+            $('#dangerToastBtn').on('click', function () {
+                const toast = new bootstrap.Toast(document.getElementById('dangerToast'));
+                toast.show();
+            });
+
+            // SweetAlert2
+            $('#swalBasic').on('click', function () {
+                Swal.fire('Any fool can use a computer');
+            });
+            $('#swalSuccess').on('click', function () {
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Success!',
+                    text: 'Everything is fine.',
+                    showConfirmButton: false,
+                    timer: 1500
+                });
+            });
+            $('#swalError').on('click', function () {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Something went wrong!',
+                });
+            });
+            $('#swalConfirm').on('click', function () {
+                Swal.fire({
+                    title: 'Are you sure?',
+                    text: "You won't be able to revert this!",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#006fee',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Yes, delete it!'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        Swal.fire('Deleted!', 'Your file has been deleted.', 'success');
+                    }
+                });
+            });
+            $('#swalCustom').on('click', function () {
+                Swal.fire({
+                    title: '<strong>HTML <u>example</u></strong>',
+                    icon: 'info',
+                    html: 'You can use <b>bold text</b>, ' +
+                        '<a href="//sweetalert2.github.io">links</a> ' +
+                        'and other HTML tags',
+                    showCloseButton: true,
+                    showCancelButton: true,
+                    focusConfirm: false,
+                    confirmButtonText: '<i class="ph-bold ph-thumbs-up"></i> Great!',
+                    confirmButtonAriaLabel: 'Thumbs up, great!',
+                    cancelButtonText: '<i class="ph-bold ph-thumbs-down"></i>',
+                    cancelButtonAriaLabel: 'Thumbs down'
+                });
+            });
+
+            // Notyf
+            const notyf = new Notyf({
+                duration: 3000,
+                position: { x: 'right', y: 'top' },
+                types: [
+                    {
+                        type: 'warning',
+                        background: 'orange',
+                        icon: {
+                            className: 'ph-bold ph-warning',
+                            tagName: 'i',
+                            color: 'white'
+                        }
+                    },
+                    {
+                        type: 'info',
+                        background: '#006fee',
+                        icon: {
+                            className: 'ph-bold ph-info',
+                            tagName: 'i',
+                            color: 'white'
+                        }
+                    }
+                ]
+            });
+
+            $('#notyfSuccess').on('click', function () {
+                notyf.success('You have been logged in successfully!');
+            });
+            $('#notyfError').on('click', function () {
+                notyf.error('Invalid username or password.');
+            });
+            $('#notyfWarning').on('click', function () {
+                notyf.open({ type: 'warning', message: 'Warning! Check your settings.' });
+            });
+            $('#notyfInfo').on('click', function () {
+                notyf.open({ type: 'info', message: 'Here is some information.' });
+            });
+        });
+    </script>
+</body>
+
+</html>
