--- a/demo/spinners.html
+++ b/demo/spinners.html
@@ -194,12 +194,17 @@
                                 <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                                 <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
+    <a class="nav-link" href="dashboard-finance.html">Finance</a>
                             </nav>
                         </div>
                         <h2 class="zd-sidenav-menu-heading">Applications</h2>
                         <a class="nav-link" href="apps-inbox.html">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-envelope"></i></div>
                             <span>Inbox</span>
+                        </a>
+                        <a class="nav-link" href="apps-chat.html">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-chats-teardrop"></i></div>
+                            <span>Chat</span>
                         </a>
                         <h2 class="zd-sidenav-menu-heading">Components</h2>
                         <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#componentsCollapse" aria-expanded="true">
@@ -331,7 +336,7 @@
         </footer>
       </nav>
     </aside>
-    <main id="layoutSidenav_content">
+    <main id="layoutSidenav_content" class="animate__animated animate__fadeIn">
       <section class="container-fluid px-4">
         <header class="my-4">
           <h1 class="h4 mb-0 fw-bold">Spinners</h1>
