--- a/demo/change-password.html
+++ b/demo/change-password.html
@@ -209,12 +209,21 @@
                 <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                 <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
+    <a class="nav-link" href="dashboard-finance.html">Finance</a>
               </nav>
             </div>
             <h2 class="zd-sidenav-menu-heading">Applications</h2>
             <a class="nav-link" href="apps-inbox.html">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-envelope"></i></div>
               <span>Inbox</span>
+            </a>
+
+            <a class="nav-link" href="apps-chat.html">
+
+                <div class="zd-nav-link-icon"><i class="ph-bold ph-chats-teardrop"></i></div>
+
+                <span>Chat</span>
+
             </a>
             <h2 class="zd-sidenav-menu-heading">Components</h2>
             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#componentsCollapse"
@@ -354,7 +363,7 @@
       </nav>
     </aside>
 
-    <main id="layoutSidenav_content">
+    <main id="layoutSidenav_content" class="animate__animated animate__fadeIn">
       <section class="container-fluid px-4 pb-5">
         <header class="my-4">
           <h1 class="h4 mb-0 fw-bold">Change Password</h1>
