--- a/demo/index.html
+++ b/demo/index.html
@@ -184,12 +184,21 @@
                 <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                 <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
+                <a class="nav-link" href="dashboard-finance.html">Finance</a>
               </nav>
             </div>
             <h2 class="zd-sidenav-menu-heading">Applications</h2>
             <a class="nav-link" href="apps-inbox.html">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-envelope"></i></div>
               <span>Inbox</span>
+            </a>
+
+            <a class="nav-link" href="apps-chat.html">
+
+              <div class="zd-nav-link-icon"><i class="ph-bold ph-chats-teardrop"></i></div>
+
+              <span>Chat</span>
+
             </a>
             <h2 class="zd-sidenav-menu-heading">Components</h2>
             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#componentsCollapse"
@@ -330,7 +339,7 @@
       </nav>
     </aside>
 
-    <main id="layoutSidenav_content">
+    <main id="layoutSidenav_content" class="animate__animated animate__fadeIn">
       <section class="container-fluid px-4 pb-5">
         <!-- Welcome Widget -->
         <div class="row mt-4">
@@ -357,7 +366,7 @@
               style="animation-delay: 0.1s;">
               <div class="card-body p-4">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                  <div class="bg-primary-subtle text-primary p-3 rounded-circle">
+                  <div class="bg-primary-subtle text-primary p-3 rounded-3">
                     <i class="ph-bold ph-users" style="font-size: 1.5rem;"></i>
                   </div>
                   <span class="badge bg-success-subtle text-success">+12.5%</span>
@@ -372,7 +381,7 @@
               style="animation-delay: 0.2s;">
               <div class="card-body p-4">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                  <div class="bg-success-subtle text-success p-3 rounded-circle">
+                  <div class="bg-success-subtle text-success p-3 rounded-3">
                     <i class="ph-bold ph-folder" style="font-size: 1.5rem;"></i>
                   </div>
                   <span class="badge bg-primary-subtle text-primary">Active</span>
@@ -387,7 +396,7 @@
               style="animation-delay: 0.3s;">
               <div class="card-body p-4">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                  <div class="bg-warning-subtle text-warning p-3 rounded-circle">
+                  <div class="bg-warning-subtle text-warning p-3 rounded-3">
                     <i class="ph-bold ph-check-circle" style="font-size: 1.5rem;"></i>
                   </div>
                   <span class="text-warning small fw-bold">85% done</span>
@@ -402,7 +411,7 @@
               style="animation-delay: 0.4s;">
               <div class="card-body p-4">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                  <div class="bg-danger-subtle text-danger p-3 rounded-circle">
+                  <div class="bg-danger-subtle text-danger p-3 rounded-3">
                     <i class="ph-bold ph-activity" style="font-size: 1.5rem;"></i>
                   </div>
                   <span class="text-success small fw-bold">Healthy</span>
